new eigen and hdf5 wip

--- a/code/makefile
+++ b/code/makefile
@@ -11,7 +11,7 @@ LIB_DIR := lib
 OBJ_DIR := obj
 DEP_DIR := obj
 EXE_DIR := bin
-CMD_DIR := src
+PROCESS_DIR := src
 DIR := SRC_DIR INC_DIR LIB_DIR OBJ_DIR EXE_DIR
 
 # Extensions
@@ -21,10 +21,10 @@ LIB_EXT := a so
 OBJ_EXT := o
 DEP_EXT := d
 EXE_EXT := out
-CMD_EXT:= py
+PROCESS_EXT:= py
 
 # Targets
-SRC :=  utils io tensor main
+SRC := utils io tensor main
 SRC := $(patsubst %,$(SRC_DIR)/%.$(SRC_EXT),$(SRC))
 
 LIB := 
@@ -35,8 +35,15 @@ OBJ := $(patsubst $(SRC_DIR)/%.$(SRC_EXT),$(OBJ_DIR)/%.$(OBJ_EXT),$(SRC))
 EXE := main
 EXE := $(patsubst %,$(EXE_DIR)/%.$(EXE_EXT),$(EXE))
 
-CMD := process
-CMD := $(patsubst %,$(CMD_DIR)/%.$(CMD_EXT),$(CMD))
+PROCESS := process
+PROCESS := $(patsubst %,$(PROCESS_DIR)/%.$(PROCESS_EXT),$(PROCESS))
+PROCESS_FLAGS :=
+PROCESS_DEP := data/data.csv
+
+PROFILE := gprof
+PROFILE_FLAGS := gprof -b -pset
+PROFILE_DEP := gmon.out
+PROFILE_OUT := profile.out
 
 
 # Optional Flags
@@ -44,47 +51,51 @@ USE_DEP := 1
 USE_OMP := 1
 USE_MKL := 1
 USE_HDF5 := /usr/lib/x86_64-linux-gnu/hdf5/serial/
+USE_PROFILE :=
 
 # Flags
-CCFLAGS := -O2 -m64 -std=c++17 -fconcepts -fPIC -DNDEBUG -Wall -Wno-unknown-pragmas -Wno-unused-variable -I/usr/include -I$(INC_DIR)
-LDFLAGS  := -L/usr/lib -L$(LIB_DIR)
-LDLIBS   := 
+CC_FLAGS := -O2 -m64 -std=c++17 -fconcepts -fPIC -DNDEBUG -Wall -Wno-unknown-pragmas -Wno-unused-variable -I/usr/include -I$(INC_DIR)
+LD_FLAGS := -L/usr/lib -L$(LIB_DIR)
+LD_LIBS  := 
 
 # User Libraries
-CCFLAGS += -I$(LIB_DIR)/eigen -I$(LIB_DIR)/lbfgspp/include
-LDFLAGS +=
-LDLIBS += -lpthread
+CC_FLAGS += -I$(LIB_DIR)/eigen -I$(LIB_DIR)/lbfgspp/include
+LD_FLAGS +=
+LD_LIBS += -lpthread
 
 # BLAS Libraries
 ifdef USE_MKL
-CCFLAGS += -I${MKLROOT}/include
-LDFLAGS += -L${MKLROOT}/lib/intel64 
-LDLIBS  += -lmkl_intel_lp64 -lmkl_intel_thread -lmkl_rt -lmkl_core -liomp5
+CC_FLAGS += -I${MKLROOT}/include
+LD_FLAGS += -L${MKLROOT}/lib/intel64
+LD_LIBS  += -lmkl_intel_lp64 -lmkl_intel_thread -lmkl_rt -lmkl_core -liomp5 -fopenmp
 else
-CCFLAGS +=
-LDFLAGS +=
-LDLIBS  += -lblas -llapack -fopenmp
+CC_FLAGS +=
+LD_FLAGS +=
+LD_LIBS  += -lblas -llapack -fopenmp
 endif
-
 
 
 # Compile Options
 ifdef USE_DEP
-# CCFLAGS += -MMD -MP
+# CC_FLAGS += -MMD -MP
 endif
 
 ifdef USE_OMP
 USE_OMP = 1
-CCFLAGS +=
-LDFLAGS += -fopenmp
+CC_FLAGS +=
+LD_FLAGS += -fopenmp -msse2
 endif
 
 ifdef USE_HDF5
 HDF5_DIR := $(USE_HDF5)
 USE_HDF5 := 1
-CCFLAGS += -I$(HDF5_DIR) -DUSE_HDF5
-LDFLAGS += -L$(HDF5_DIR)lib 
-LDLIBS += -lhdf5 -lhdf5_hl -lhdf5_cpp
+CC_FLAGS += -I$(HDF5_DIR) -DUSE_HDF5
+LD_FLAGS += -L$(HDF5_DIR)lib
+LD_LIBS += -lhdf5 -lhdf5_hl -lhdf5_cpp
+endif
+
+ifdef USE_PROFILE
+CC_FLAGS += -pg
 endif
 
 
@@ -103,8 +114,8 @@ endif
 
 
 # Make Options
-.PHONY: all run test clean process
-.SILENT : all run test clean process
+.PHONY: all run test clean process profile
+.SILENT : all run test clean process profile
 .PRECIOUS : $(OBJ_DIR)/%.$(OBJ_EXT) $(DEP_DIR)/%.$(DEP_EXT)
 
 
@@ -121,21 +132,24 @@ clean :
 	@$(RMDIR) $(OBJ_DIR)
 	@$(RMDIR) $(EXE_DIR)
 
-process : $(CMD)
-	$(RUN)$< $(RUN_ARGS)
+process : $(PROCESS) $(PROCESS_DEP)
+	$(PROCESS) $(PROCESS_FLAGS) $(PROCESS_DEP)
 
+profile : $(PROFILE_DEP)
+	$(PROFILE) $(PROFILE_FLAGS) $(EXE) $(PROFILE_DEP) > $(PROFILE_OUT)
 
 
 $(EXE_DIR)/%.$(EXE_EXT) : $(OBJ) $(LIB) | $(EXE_DIR)
-	$(CC) $(CCFLAGS) $(OBJ) -o $@ $(LDFLAGS) $(LDLIBS)
+	$(CC) $(CC_FLAGS) $(OBJ) -o $@ $(LD_FLAGS) $(LD_LIBS)
 
 $(OBJ_DIR)/%.$(OBJ_EXT): $(SRC_DIR)/%.$(SRC_EXT) $(LIB) | $(OBJ_DIR)
-	$(CC) $(CCFLAGS) -c $< -o $@ $(LDFLAGS) $(LDLIBS)
+	$(CC) $(CC_FLAGS) -c $< -o $@ $(LD_FLAGS) $(LD_LIBS)
 
 $(OBJ_DIR) $(EXE_DIR) : 
 	@$(MKDIR) $@
 
-
+$(PROCESS_DEP): run
+$(PROFILE_DEP): run
 
 # ifdef USE_DEP
 -include $(OBJ:.$(OBJ_EXT)=.$(DEP_EXT)) 
