dump multiple complex datasets

--- a/code/makefile
+++ b/code/makefile
@@ -24,7 +24,7 @@ EXE_EXT := out
 PROCESS_EXT:= py
 
 # Targets
-SRC := utils io tensor main
+SRC := utils io hdf5 tensor main
 SRC := $(patsubst %,$(SRC_DIR)/%.$(SRC_EXT),$(SRC))
 
 # LIB := /usr/local/lib/libhdf5_hl_cpp.a /usr/local/lib/libhdf5_cpp.a /usr/local/lib/libhdf5_hl.a /usr/local/lib/libhdf5.a
@@ -57,7 +57,7 @@ USE_HDF5 := /usr/local/
 USE_PROFILE :=
 
 # Flags
-CC_FLAGS := -Ofast -funroll-loops -m64 -std=c++17 -fconcepts -fPIC -DNDEBUG -Wall -Wno-unknown-pragmas -Wno-unused-variable -I/usr/include -I$(INC_DIR)
+CC_FLAGS := -Ofast -funroll-loops -m64 -std=c++17 -fext-numeric-literals -fconcepts -fPIC -DNDEBUG -Wall -Wno-unknown-pragmas -Wno-unused-variable -I/usr/include -I$(INC_DIR)
 LD_FLAGS := -L/usr/lib -L$(LIB_DIR)
 LD_LIBS  := 
 
