--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "code/lib/itertools"]
 	path = code/lib/itertools
 	url = https://github.com/ryanhaining/cppitertools.git
+[submodule "code/lib/spectra"]
+	path = code/lib/spectra
+	url = https://github.com/yixuan/spectra.git
