run and process for N~20, wip on tolerances

--- a/code/makefile
+++ b/code/makefile
@@ -132,7 +132,7 @@ all: clean $(EXE)
 
 run : clean_data $(EXE)
 	$(RUN)$(EXE) $(RUN_ARGS)
-	h5dump $(PROCESS_DEP)
+# 	h5dump $(PROCESS_DEP)
 
 test :
 
